force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/Bulk_Record_Upload_Process_Field__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps one CSV column to a Salesforce field within a Bulk Record Upload Process.</description>
    <label>Bulk Record Upload Process Field</label>
    <pluralLabel>Bulk Record Upload Process Fields</pluralLabel>
</CustomObject>