force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/BlankTokens__c.field-meta.xml
<CustomField>
    <fullName>BlankTokens__c</fullName><description
  >Comma-separated CSV cell values treated as blank for this column, in addition to an empty cell.</description>
    <inlineHelpText
  >Example: N/A, NULL, -. Matched case-insensitively after trimming.</inlineHelpText>
    <label>Blank Tokens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>