force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/CaseAction__c.field-meta.xml
<CustomField>
    <fullName>CaseAction__c</fullName><description
  >Normalizes the letter case of the CSV cell before blank checks and coercion.</description>
    <inlineHelpText
  >Applies only to text-like columns. None leaves the value unchanged.</inlineHelpText><label
  >Case Action</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>NONE</fullName><default>true</default><label
        >None</label></value>
        <value><fullName>UPPER</fullName><default>false</default><label
        >Upper Case</label></value>
        <value><fullName>LOWER</fullName><default>false</default><label
        >Lower Case</label></value>
        <value><fullName>TITLE</fullName><default>false</default><label
        >Title Case</label></value>
    </valueSetDefinition></valueSet>
</CustomField>