force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/ColumnOrder__c.field-meta.xml
<CustomField>
  <fullName>ColumnOrder__c</fullName>
  <description
  >Controls template, validation, mapping, and result-column order.</description>
  <inlineHelpText
  >Enter a unique whole number from 1–100 within this process.</inlineHelpText>
  <label>Column Order</label>
  <precision>3</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>