force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/CsvColumnHeader__c.field-meta.xml
<CustomField>
  <fullName>CsvColumnHeader__c</fullName>
  <description
  >Defines the stable CSV header mapped by this field configuration.</description>
  <inlineHelpText
  >Enter the header users place in the CSV file. Matching ignores case and surrounding spaces.</inlineHelpText>
  <label>CSV Column Header</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
</CustomField>