force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/CustomMergeStrategyClass__c.field-meta.xml
<CustomField>
    <fullName>CustomMergeStrategyClass__c</fullName><description
  >Exact Apex class name implementing BulkRecordUploadFieldMergeStrategy, used only when Existing Value Action is Custom.</description>
    <inlineHelpText
  >Required only when Existing Value Action is Custom. Validated at configuration load and at every run; an unresolvable or non-implementing name fails safely and never runs.</inlineHelpText>
    <label>Custom Merge Strategy Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>