force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/CustomSeparator__c.field-meta.xml
<CustomField>
    <fullName>CustomSeparator__c</fullName><description
  >Exact separator text used between existing and incoming text when Text Separator is Custom.</description>
    <inlineHelpText
  >Required only when Text Separator is Custom. Entered exactly as typed, including spaces.</inlineHelpText>
    <label>Custom Separator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>