force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName><description
  >Raw text value substituted for a blank CSV cell when Blank CSV Action is Use Default.</description>
    <inlineHelpText
  >Required only when Blank CSV Action is Use Default. Parsed the same way as an uploaded cell value.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>