force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/DisplayLabel__c.field-meta.xml
<CustomField>
  <fullName>DisplayLabel__c</fullName>
  <description
  >Provides an optional friendly name without changing the CSV header contract.</description>
  <inlineHelpText
  >Enter the name shown to users, or leave blank to use the Salesforce field label.</inlineHelpText>
  <label>Column Display Label</label>
  <length>80</length>
  <type>Text</type>
</CustomField>