force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/ExistingValueAction__c.field-meta.xml
<CustomField>
    <fullName>ExistingValueAction__c</fullName><description
  >Controls how a nonblank CSV value combines with an existing Salesforce value.</description>
    <inlineHelpText
  >Choose Replace for ordinary mapping. Append, Prepend, Add Values, and Remove Values are text-like or multi-select only. Add, Subtract, Use Later, and Use Earlier are numeric or date only. True If Either and True If Both are checkbox only.</inlineHelpText><label
  >Existing Value Action</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>REPLACE</fullName><default>true</default><label
        >Replace</label></value>
        <value><fullName>KEEP_EXISTING</fullName><default>false</default><label
        >Keep Existing</label></value>
        <value><fullName>APPEND</fullName><default>false</default><label
        >Append</label></value>
        <value><fullName>PREPEND</fullName><default>false</default><label
        >Prepend</label></value>
        <value><fullName>ADD_VALUES</fullName><default>false</default><label
        >Add Values</label></value>
        <value><fullName>REMOVE_VALUES</fullName><default>false</default><label
        >Remove Values</label></value>
        <value><fullName>ADD</fullName><default>false</default><label
        >Add</label></value>
        <value><fullName>SUBTRACT</fullName><default>false</default><label
        >Subtract</label></value>
        <value><fullName>USE_LATER</fullName><default>false</default><label
        >Use Later</label></value>
        <value><fullName>USE_EARLIER</fullName><default>false</default><label
        >Use Earlier</label></value>
        <value><fullName>TRUE_IF_EITHER</fullName><default>false</default><label
        >True If Either</label></value>
        <value><fullName>TRUE_IF_BOTH</fullName><default>false</default><label
        >True If Both</label></value>
    </valueSetDefinition></valueSet>
</CustomField>