force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
  <fullName>FieldApiName__c</fullName>
  <description
  >Identifies the target Salesforce field for this CSV column.</description>
  <inlineHelpText
  >Enter a field API name on the process object, such as Name or ExternalId__c.</inlineHelpText>
  <label>Salesforce Field API Name</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
</CustomField>