force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/IncludeInResult__c.field-meta.xml
<CustomField>
  <fullName>IncludeInResult__c</fullName>
  <defaultValue>true</defaultValue>
  <description
  >Controls whether this field appears in the result CSV.</description>
  <inlineHelpText
  >Select to include this field when the running user has field access.</inlineHelpText>
  <label>Include in Result File</label>
  <type>Checkbox</type>
</CustomField>