force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
  <fullName>IsActive__c</fullName>
  <defaultValue>true</defaultValue>
  <description
  >Controls whether this field mapping participates in new uploads.</description>
  <inlineHelpText
  >Clear to stop using this mapping without deleting its configuration history.</inlineHelpText>
  <label>Used by Process</label>
  <type>Checkbox</type>
</CustomField>