force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/IsMatchField__c.field-meta.xml
<CustomField>
  <fullName>IsMatchField__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Marks the field used to find records for update or delete.</description>
  <inlineHelpText
  >Select exactly one suitable field for an Update or Delete process.</inlineHelpText>
  <label>Update/Delete Match Field</label>
  <type>Checkbox</type>
</CustomField>