force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
  <fullName>IsRequired__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Requires every CSV row to provide a nonblank value for this field.</description>
  <inlineHelpText
  >Select when every uploaded row must provide this value.</inlineHelpText>
  <label>Required in Every Row</label>
  <type>Checkbox</type>
</CustomField>