force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/IsUpsertExternalId__c.field-meta.xml
<CustomField>
  <fullName>IsUpsertExternalId__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Marks the External ID field used to create or update records.</description>
  <inlineHelpText
  >Select exactly one accessible External ID field for an Upsert process.</inlineHelpText>
  <label>Upsert External ID</label>
  <type>Checkbox</type>
</CustomField>