force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/LookupMatchField__c.field-meta.xml
<CustomField>
    <fullName>LookupMatchField__c</fullName><description
  >API name of a field on the lookup's target object used to resolve the CSV cell to a record Id, instead of requiring the literal Id.</description>
    <inlineHelpText
  >Optional; applies only to non-polymorphic lookup and master-detail columns. Leave blank to require the exact 15 or 18-character record Id in the CSV cell. A value that resolves to zero or more than one record fails the row.</inlineHelpText>
    <length>255</length>
    <label>Lookup Match Field</label>
    <type>Text</type>
</CustomField>