force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName><description
  >Largest accepted coerced value for a number, currency, or percent column. Rows above it are rejected.</description>
    <inlineHelpText
  >Optional. Applies to number, currency, and percent columns only.</inlineHelpText>
    <label>Maximum Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>