force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/MinValue__c.field-meta.xml
<CustomField>
    <fullName>MinValue__c</fullName><description
  >Smallest accepted coerced value for a number, currency, or percent column. Rows below it are rejected.</description>
    <inlineHelpText
  >Optional. Applies to number, currency, and percent columns only.</inlineHelpText>
    <label>Minimum Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>