force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/SourceTemplate__c.field-meta.xml
<CustomField>
    <fullName>SourceTemplate__c</fullName><description
  >Computes this column's value from other configured columns instead of its own CSV Column Header, using {columnKey} tokens.</description>
    <inlineHelpText
  >Optional. Example: {first_name} {last_name}. Each {token} must match another active column's CSV Column Header for this process. A missing referenced value becomes blank text.</inlineHelpText>
    <label>Source Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>