force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/TextSeparator__c.field-meta.xml
<CustomField>
    <fullName>TextSeparator__c</fullName><description
  >Separator inserted between existing and incoming text for Append or Prepend.</description>
    <inlineHelpText
  >Choose how existing and incoming text are joined. This applies only to Append and Prepend.</inlineHelpText><label
  >Text Separator</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>SPACE</fullName><default>true</default><label
        >Space</label></value>
        <value><fullName>NEW_LINE</fullName><default>false</default><label
        >New Line</label></value>
        <value><fullName>COMMA_SPACE</fullName><default>false</default><label
        >Comma and Space</label></value>
        <value><fullName>SEMICOLON_SPACE</fullName><default
        >false</default><label>Semicolon and Space</label></value>
        <value><fullName>NONE</fullName><default>false</default><label
        >None</label></value>
    </valueSetDefinition></valueSet>
</CustomField>