force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/TrimValue__c.field-meta.xml
<CustomField>
  <fullName>TrimValue__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Removes leading and trailing whitespace from the CSV cell before blank checks, defaulting, and coercion.</description>
  <inlineHelpText
  >Select to trim surrounding whitespace before this column's value is evaluated.</inlineHelpText>
  <label>Trim Value</label>
  <type>Checkbox</type>
</CustomField>