force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/ValidationPattern__c.field-meta.xml
<CustomField>
    <fullName>ValidationPattern__c</fullName><description
  >Regular expression a trimmed, case-normalized text-like cell must fully match. Rows that do not match are rejected.</description>
    <inlineHelpText
  >Optional. Applies to text-like columns only, after Trim Value and Case Action, before mapping.</inlineHelpText>
    <label>Validation Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>