force-app/main/default/objects/Bulk_Record_Upload_Process_Field__mdt/fields/ValueHandling__c.field-meta.xml
<CustomField>
  <fullName>ValueHandling__c</fullName>
  <description
  >Legacy version 1 merge choice retained only for migration.</description>
  <inlineHelpText
  >For version 2 processes, use Existing Value Action and Blank CSV Action instead.</inlineHelpText>
  <label>Legacy Value Handling</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>REPLACE</fullName>
        <default>true</default>
        <label>Replace</label>
      </value>
      <value>
        <fullName>APPEND</fullName>
        <label>Append</label>
      </value>
      <value>
        <fullName>PREPEND</fullName>
        <label>Prepend</label>
      </value>
      <value>
        <fullName>CLEAR_WHEN_BLANK</fullName>
        <label>Clear When Blank</label>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>